--- a/index.html
+++ b/index.html
@@ -16,12 +16,35 @@
         <button type="button" class="ancientButton"><img src="/assets/Ancients/ShubNiggurath.png" alt="ShubNiggurath" class="imgAncient ShubNiggurath"></button>
     </div>
     <div class="level">
-        <button type="button" class="buttonLevel easy">Низкая</button>
-        <button type="button" class="buttonLevel medium">Средняя</button>
-        <button type="button" class="buttonLevel hard">Высокая</button>
+        <button type="button" class="buttonLevel easy disp">Низкая</button>
+        <button type="button" class="buttonLevel medium disp">Средняя</button>
+        <button type="button" class="buttonLevel hard disp">Высокая</button>
+
+        <button type="button" class="buttonLevel easy1 disp">Низкая</button>
+        <button type="button" class="buttonLevel medium1 disp">Средняя</button>
+        <button type="button" class="buttonLevel hard1 disp">Высокая</button>
+
+        <button type="button" class="buttonLevel easy2 disp">Низкая</button>
+        <button type="button" class="buttonLevel medium2 disp">Средняя</button>
+        <button type="button" class="buttonLevel hard2 disp">Высокая</button>
+
+        <button type="button" class="buttonLevel easy3 disp">Низкая</button>
+        <button type="button" class="buttonLevel medium3 disp">Средняя</button>
+        <button type="button" class="buttonLevel hard3 disp">Высокая</button>
     </div>
     <div class="last">
-        <button type="button" class="back buttonLevel cold">Замешать колоду</button>
+        <button type="button" class="back buttonLevel cold disp">Замешать колоду</button>
+        <button type="button" class="back buttonLevel cold1 disp">Замешать колоду</button>
+        <button type="button" class="back buttonLevel cold2 disp">Замешать колоду</button>
+        <button type="button" class="back buttonLevel cold3 disp">Замешать колоду</button>
+        <button type="button" class="back buttonLevel cold4 disp">Замешать колоду</button>
+        <button type="button" class="back buttonLevel cold5 disp">Замешать колоду</button>
+        <button type="button" class="back buttonLevel cold6 disp">Замешать колоду</button>
+        <button type="button" class="back buttonLevel cold7 disp">Замешать колоду</button>
+        <button type="button" class="back buttonLevel cold8 disp">Замешать колоду</button>
+        <button type="button" class="back buttonLevel cold9 disp">Замешать колоду</button>
+        <button type="button" class="back buttonLevel cold10 disp">Замешать колоду</button>
+        <button type="button" class="back buttonLevel cold11 disp">Замешать колоду</button>
     </div>
 </div>
     <script src="script.js"></script>
