feat: add random card for Azathoth stage meduim

--- a/index.html
+++ b/index.html
@@ -11,40 +11,19 @@
     <div class="first">
     <div class="ancient">
         <button type="button" class="ancientButton"><img src="/assets/Ancients/Azathoth.png" alt="Azathoth" class="imgAncient Azathoth"></button>
-        <button type="button" class="ancientButton"><img src="/assets/Ancients/Cthulthu.png" alt="Cthulthu" class="imgAncient Cthulthu"></button>
+        <!-- <button type="button" class="ancientButton"><img src="/assets/Ancients/Cthulthu.png" alt="Cthulthu" class="imgAncient Cthulthu"></button>
         <button type="button" class="ancientButton"><img src="/assets/Ancients/IogSothoth.png" alt="IogSothoth" class="imgAncient IogSothoth"></button>
-        <button type="button" class="ancientButton"><img src="/assets/Ancients/ShubNiggurath.png" alt="ShubNiggurath" class="imgAncient ShubNiggurath"></button>
+        <button type="button" class="ancientButton"><img src="/assets/Ancients/ShubNiggurath.png" alt="ShubNiggurath" class="imgAncient ShubNiggurath"></button> -->
     </div>
     <div class="level">
-        <button type="button" class="buttonLevel easy disp">Низкая</button>
+        <!-- <button type="button" class="buttonLevel easy disp">Низкая</button> -->
         <button type="button" class="buttonLevel medium disp">Средняя</button>
-        <button type="button" class="buttonLevel hard disp">Высокая</button>
-
-        <button type="button" class="buttonLevel easy1 disp">Низкая</button>
-        <button type="button" class="buttonLevel medium1 disp">Средняя</button>
-        <button type="button" class="buttonLevel hard1 disp">Высокая</button>
-
-        <button type="button" class="buttonLevel easy2 disp">Низкая</button>
-        <button type="button" class="buttonLevel medium2 disp">Средняя</button>
-        <button type="button" class="buttonLevel hard2 disp">Высокая</button>
-
-        <button type="button" class="buttonLevel easy3 disp">Низкая</button>
-        <button type="button" class="buttonLevel medium3 disp">Средняя</button>
-        <button type="button" class="buttonLevel hard3 disp">Высокая</button>
+        <!-- <button type="button" class="buttonLevel hard disp">Высокая</button> -->
     </div>
     <div class="last">
         <button type="button" class="back buttonLevel cold disp">Замешать колоду</button>
-        <button type="button" class="back buttonLevel cold1 disp">Замешать колоду</button>
-        <button type="button" class="back buttonLevel cold2 disp">Замешать колоду</button>
-        <button type="button" class="back buttonLevel cold3 disp">Замешать колоду</button>
-        <button type="button" class="back buttonLevel cold4 disp">Замешать колоду</button>
-        <button type="button" class="back buttonLevel cold5 disp">Замешать колоду</button>
-        <button type="button" class="back buttonLevel cold6 disp">Замешать колоду</button>
-        <button type="button" class="back buttonLevel cold7 disp">Замешать колоду</button>
-        <button type="button" class="back buttonLevel cold8 disp">Замешать колоду</button>
-        <button type="button" class="back buttonLevel cold9 disp">Замешать колоду</button>
-        <button type="button" class="back buttonLevel cold10 disp">Замешать колоду</button>
-        <button type="button" class="back buttonLevel cold11 disp">Замешать колоду</button>
+        <button type="button" class="bg disp"><img src="assets/mythicCardBackground.png" alt="mythicCardBackground" class="bgImages"></button>
+    <div class="card"></div>
     </div>
 </div>
     <script src="script.js"></script>
